# microtvm-espidf-template

./: README.md
template_project/: CMakeLists.txt.template  README.md  boards.json  microtvm_api_server.py
template_project/crt_config/: crt_config.h
template_project/src/aot_demo/: espidf_uart.c  espidf_uart.h  main.c
template_project/src/host_driven/: CMakeLists.txt  main.c
template_project/src/host_driven/main/: CMakeLists.txt  main.c
template_project/src/micro_kws/: CMakeLists.txt  README.md  sdkconfig.defaults
template_project/src/micro_kws/components/: README.md
template_project/src/micro_kws/components/student/: CMakeLists.txt  README.md  posterior.cc
template_project/src/micro_kws/components/student/include/: posterior.h
template_project/src/micro_kws/components/student/test/: CMakeLists.txt  README.md  test_posterior.cpp
template_project/src/micro_kws/main/: CMakeLists.txt  backend.cc  debug.cc  main.cc  tvm_wrapper.cc  tvm_wrapper.h
template_project/src/micro_kws/test/: CMakeLists.txt  Makefile  README.md
template_project/src/micro_kws/test/main/: CMakeLists.txt  student_test.c
